made the javascript work, made vars, incrementers and appended them to their respective html divs

--- a/Index.html
+++ b/Index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="stylesheets.css" />
+    <link rel="stylesheet" type="text/css" href="Assets\Css\style.css" />
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script src="Assets\Javascript\game.js"></script>
   </head>
 
-  <body background="Assets/KingDavid.jpg">
+  <body background="Assets/Images/KingDavid.jpg">
     <div id="notreTitle">
       <h1>CrystalsCollector!</h1>
     </div>
@@ -31,13 +37,18 @@
     </div>
     <br />
     <div id="tallyMarker">
-      <p id="saeByeOlbe">Wins:</p>
+      <p id="weens">Wins:</p>
       <br />
-      <p id="goats">Losses:</p>
+      <p id="lossehs">Losses:</p>
     </div>
 
-    <!-- Mah Images go here -->
-    <div id="inline photos"></div>
+    <!-- My Images go here -->
+    <div id="inline photos">
+      <div id="redRuby">Red Ruby</div>
+      <div id="blueDiamond">Blue Diamond</div>
+      <div id="yellowGem">Yellow Gem</div>
+      <div id="greenGem">Green Gem</div>
+    </div>
 
     <div id="scoreCount">
       <p>Your total score is:</p>
